--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -18,36 +18,25 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./backend
+        working-directory: starter/backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Cache pipenv dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pipenv
-          key: pipenv-${{ runner.os }}-${{ hashFiles('**/Pipfile.lock') }}
-          restore-keys: |
-            pipenv-${{ runner.os }}-
-
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{env.PYTHON_VERSION}}
-
-      - name: Install pipenv
-        run: |
-          pip install pipenv
+          python-version: '3.10'  
 
       - name: Install dependencies
         run: |
-          pipenv install
+          python -m pip install --upgrade pip
+          pip install pipenv
+          pipenv install --dev
 
-      - name: Run lint
-        run: |
-          pipenv run lint
-
+      - name: Run Linting
+        run: pipenv run lint
+ 	
   test:
     name: Backend Run Tests
     runs-on: ubuntu-latest
@@ -74,7 +63,7 @@ jobs:
 
       - name: Run tests
         run: |
-          pipenv run pytest  # Assuming pytest is your testing framework
+          pipenv run pytest  
 
   build:
     name: Build & Push Docker Image
@@ -119,13 +108,8 @@ jobs:
           REPOSITORY: backend
           IMAGE_TAG: latest
         run: |
-          # Build the Docker image
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-
-          # Check the built image
           docker images
-
-          # Push the image to Amazon ECR
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
       - name: Cache Docker image
