--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -12,7 +12,6 @@ on:
 env:
   PYTHON_VERSION: 3.11
 
-jobs:
   lint:
     name: Backend Run Lint
     runs-on: ubuntu-latest
@@ -26,7 +25,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'  
+          python-version: 3.11  
 
       - name: Install dependencies
         run: |
@@ -36,34 +35,31 @@ jobs:
 
       - name: Run Linting
         run: pipenv run lint
- 	
+
   test:
     name: Backend Run Tests
     runs-on: ubuntu-latest
-    needs: lint  # Ensure test runs only after lint job
+    needs: lint # Run only after linting passes
     defaults:
       run:
-        working-directory: ./backend
+        working-directory: backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{env.PYTHON_VERSION}}
+          python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install pipenv
-        run: |
-          pip install pipenv
+        run: pip install pipenv
 
       - name: Install dependencies
-        run: |
-          pipenv install
+        run: pipenv install
 
       - name: Run tests
-        run: |
-          pipenv run pytest  
+        run: pipenv run pytest
 
   build:
     name: Build & Push Docker Image
