--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: starter/backend
+        working-directory: ./backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
